Try to fix padding issues on iPhone.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,4 @@
 body {
-  padding: 50px;
+    padding: 50px;
+    @media (max-width: 979px) { body { padding: 0px;  } }
 }
